fix: Remove white bar from top and bottom on mobile. Minor CSS updates

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,7 +44,8 @@ html {
 }
 
 body {
-  background: var(--background);
+  /* background: var(--background); */
+  background: #0F171F;
   color: var(--foreground);
   font-family: var(--font-special-gothic-condensed-one), Arial, Helvetica, sans-serif;
   overflow-x: hidden;
